--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
             <div id="flower-view"></div>
 
-            <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
+            <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
             <script src="./assets/javascript/app.js"></script>
         </div>
 </body>
